# cleanvision

./: .coveragerc  .editorconfig  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  DEVELOPMENT.md  FAQ.md  ImageDataset.py  MANIFEST.in  README.md  Untitled.ipynb  deepchecks_explore.ipynb  demo.ipynb  environment_linux.yml  image_dataset.py  image_quality_v3.py  issue_check_helpers.py  issue_checks.ipynb  issue_checks.py  misc_info_documentation.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requires.txt  setup.py  short_output_test.py  user_script.py  utils.py  visual_benchmark.ipynb
.github/: pull-request-links.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  3-help.md
.github/scripts/: get_version.py  (+1 more)
clean_vision/: image_dataset.py  imagelab.py  issue_checks.py  issue_types.py  viz_manager.py
cleanvision/: image_dataset.py  imagelab.py  issue_checks.py
docs/: Makefile  requirements.txt
examples/: custom_issue_manager.py  demo.ipynb  huggingface_dataset.ipynb  run.py  torchvision_dataset.ipynb  tutorial.ipynb  user_script.py
image_data_quality/: image_dataset.py  issue_checks.py
notebooks/: demo.ipynb  multiproc_benchmark.ipynb  visual-caltech.ipynb  visual-cifar10.ipynb  visual-concrete.ipynb  visual-demo.ipynb  visual-inte-image.ipynb  visual-synthetic-caltech.ipynb  visual_benchmark.ipynb
tests/: conftest.py  test_custom_issue.py  test_dataset.py  test_duplicate_issue_manager.py  test_image_property_helpers.py  test_image_property_issue_manager.py  test_imagelab.py  test_issue_checks.py  test_run.py  test_save_load.py  test_size_issue_manager.py  test_utils.py  test_visualize.py  test_viz_manager.py  unit_tests.py
tutorials/: huggingface_dataset.ipynb  torchvision_dataset.ipynb
utils/: __init__.py  utils.py
(+88 files in other folders)
